@@ -167,7 +167,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @BeforeEach
-    void setUp() {
+    public void setUp() {
         testContainer = jsonTestUtility.getTestContainer();
         testShipment = jsonTestUtility.getTestShipment();
         testPacking = jsonTestUtility.getTestPacking();
@@ -183,7 +183,7 @@ class ContainerServiceTest extends CommonMocks {
 
 
     @Test
-    void testCreate_Success() {
+    public void testCreate_Success() {
         ResponseEntity<IRunnerResponse> responseEntity = containerService.create(CommonRequestModel.buildRequest());
 
         Assertions.assertNull(responseEntity);
@@ -192,7 +192,7 @@ class ContainerServiceTest extends CommonMocks {
 
 
     @Test
-    void testAttachPacks_Success() {
+    public void testAttachPacks_Success() {
         long containerId = 1L;
         List<Long> packsId = new ArrayList<>();
         packsId.add(100L);
@@ -218,8 +218,8 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    @Disabled("Skipped")
-    void testAttachPacks_ContainerNotFound() {
+    @Disabled
+    public void testAttachPacks_ContainerNotFound() {
         long containerId = 1L;
         List<Long> packsId = new ArrayList<>();
         packsId.add(100L);
@@ -233,7 +233,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testAttachPacks_PackingNotFound() {
+    public void testAttachPacks_PackingNotFound() {
         long containerId = 1L;
         List<Long> packsId = new ArrayList<>();
         packsId.add(100L);
@@ -250,7 +250,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testUpdate() throws RunnerException{
+    void testUpdate() throws RunnerException, NoSuchFieldException, JsonProcessingException, InvocationTargetException, IllegalAccessException, NoSuchMethodException {
         ResponseEntity<IRunnerResponse> responseEntity = containerService.update(CommonRequestModel.buildRequest());
 
         Assertions.assertNull(responseEntity);
@@ -323,7 +323,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testCalculateUtilization_WithNonNullContainer() {
+    public void testCalculateUtilization_WithNonNullContainer() {
         Containers container = new Containers();
         container.setAchievedVolume(BigDecimal.valueOf(50));
         container.setAllocatedVolume(BigDecimal.valueOf(100));
@@ -337,13 +337,13 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testCalculateUtilization_WithNullContainer() {
+    public void testCalculateUtilization_WithNullContainer() {
         Containers resultContainer = containerService.calculateUtilization(null);
         Assertions.assertNull(resultContainer);
     }
 
     @Test
-    void testCalculateUtilization_WithZeroAllocatedWeight() {
+    public void testCalculateUtilization_WithZeroAllocatedWeight() {
         Containers container = new Containers();
         container.setAchievedVolume(BigDecimal.valueOf(50));
         container.setAllocatedVolume(BigDecimal.valueOf(100));
@@ -357,7 +357,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testCalculateUtilization_WithZeroAllocatedVolume() {
+    public void testCalculateUtilization_WithZeroAllocatedVolume() {
         Containers container = new Containers();
         container.setAchievedVolume(BigDecimal.valueOf(50));
         container.setAllocatedVolume(BigDecimal.ZERO);
@@ -371,7 +371,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testCalculateUtilization_WithNullAchievedVolumeAndWeight() {
+    public void testCalculateUtilization_WithNullAchievedVolumeAndWeight() {
         Containers container = new Containers();
         container.setAllocatedVolume(BigDecimal.valueOf(100));
         container.setAllocatedWeight(BigDecimal.valueOf(1000));
@@ -383,7 +383,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testCalculateAchieved_AllocatedForSameUnit_Success() {
+    public void testCalculateAchieved_AllocatedForSameUnit_Success() {
         testContainer.setId(1L);
         ContainerRequest containerRequest = objectMapper.convertValue(testContainer, ContainerRequest.class);
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(containerRequest);
@@ -392,7 +392,7 @@ class ContainerServiceTest extends CommonMocks {
         when(jsonHelper.convertValue(any(ContainerRequest.class), eq(Containers.class))).thenReturn(testContainer);
         when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn(containerResponse);
 
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedAllocatedForSameUnit(commonRequestModel);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchieved_AllocatedForSameUnit(commonRequestModel);
 
         Assertions.assertNotNull(responseEntity);
         assertEquals(responseEntity, ResponseHelper.buildSuccessResponse(containerResponse));
@@ -439,7 +439,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testValidateContainerNumber_Success() {
+    public void testValidateContainerNumber_Success() {
         String validContainerNumber = "ABCD123456";
         ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(validContainerNumber);
         Assertions.assertNotNull(responseEntity);
@@ -447,7 +447,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testValidateContainerNumber_InvalidLength() {
+    public void testValidateContainerNumber_InvalidLength() {
         String invalidLengthContainerNumber = "ABC123";
         ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(invalidLengthContainerNumber);
         Assertions.assertNotNull(responseEntity);
@@ -455,7 +455,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testValidateContainerNumber_InvalidCharacters() {
+    public void testValidateContainerNumber_InvalidCharacters() {
         String invalidCharactersContainerNumber = "1234ABCD56";
         ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(invalidCharactersContainerNumber);
         Assertions.assertNotNull(responseEntity);
@@ -497,7 +497,7 @@ class ContainerServiceTest extends CommonMocks {
         request.setPacksId(List.of(2L));
         request.setShipmentId(3L);
         when(containerDao.findById(anyLong())).thenThrow(new RuntimeException());
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
     }
@@ -509,7 +509,7 @@ class ContainerServiceTest extends CommonMocks {
         request.setPacksId(List.of(2L));
         request.setShipmentId(3L);
         when(containerDao.findById(anyLong())).thenReturn(Optional.empty());
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
     }
@@ -522,7 +522,7 @@ class ContainerServiceTest extends CommonMocks {
         when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
         testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
@@ -535,7 +535,7 @@ class ContainerServiceTest extends CommonMocks {
         request.setPacksId(new ArrayList<>());
         when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
@@ -551,12 +551,12 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
     @Test
-    void calculateAchievedQuantityOnPackDetach() {
+    void calculateAchievedQuantity_onPackDetach() {
         ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
         request.setContainerId(1L);
         request.setPacksId(List.of(2L));
@@ -565,7 +565,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
@@ -579,7 +579,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(new ArrayList<>()));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
@@ -593,7 +593,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(null);
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
@@ -810,7 +810,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testShipment)));
         when(containerDao.save(any())).thenReturn(testContainer);
         when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.v1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.V1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
@@ -821,24 +821,24 @@ class ContainerServiceTest extends CommonMocks {
         when(containerDao.findByGuid(any())).thenReturn(List.of(testContainer));
         when(containerDao.save(any())).thenReturn(testContainer);
         when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.v1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.V1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
 
     @Test
-    void V1ContainerCreateAndUpdate_Failure(){
+    void V1ContainerCreateAndUpdate_Failure() throws RunnerException{
         when(containerDao.findByGuid(any())).thenThrow(new RuntimeException());
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2());
-        assertThrows(RuntimeException.class, () -> containerService.v1ContainerCreateAndUpdate(commonRequestModel, false));
+        assertThrows(RuntimeException.class, () -> containerService.V1ContainerCreateAndUpdate(commonRequestModel, false));
     }
 
     @Test
     void V1BulkContainerCreateAndUpdate() throws RunnerException{
         BulkContainerRequestV2 bulkContainerRequestV2 = BulkContainerRequestV2.builder().bulkContainers(List.of(jsonTestUtility.getTestContainerRequestV2())).build();
         ContainerService spyService = spy(containerService);
-        doReturn(new ResponseEntity<>(HttpStatus.OK)).when(spyService).v1ContainerCreateAndUpdate(any(), anyBoolean());
-        ResponseEntity<IRunnerResponse> responseEntity = spyService.v1BulkContainerCreateAndUpdate(CommonRequestModel.buildRequest(bulkContainerRequestV2));
+        doReturn(new ResponseEntity<>(HttpStatus.OK)).when(spyService).V1ContainerCreateAndUpdate(any(), anyBoolean());
+        ResponseEntity<IRunnerResponse> responseEntity = spyService.V1BulkContainerCreateAndUpdate(CommonRequestModel.buildRequest(bulkContainerRequestV2));
         assertNotNull(responseEntity);
     }
 
@@ -846,13 +846,13 @@ class ContainerServiceTest extends CommonMocks {
     void V1BulkContainerCreateAndUpdate_Failure() throws RunnerException{
         BulkContainerRequestV2 bulkContainerRequestV2 = BulkContainerRequestV2.builder().bulkContainers(List.of(jsonTestUtility.getTestContainerRequestV2())).build();
         ContainerService spyService = spy(containerService);
-        doThrow(new RunnerException()).when(spyService).v1ContainerCreateAndUpdate(any(), anyBoolean());
+        doThrow(new RunnerException()).when(spyService).V1ContainerCreateAndUpdate(any(), anyBoolean());
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(bulkContainerRequestV2);
-        assertThrows(RuntimeException.class, () -> spyService.v1BulkContainerCreateAndUpdate(commonRequestModel));
+        assertThrows(RuntimeException.class, () -> spyService.V1BulkContainerCreateAndUpdate(commonRequestModel));
     }
 
     @Test
-    void testExportContainers_Success() {
+    void testExportContainers_Success() throws IOException, RunnerException, IllegalAccessException {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -877,7 +877,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_ConsoleIdNull(){
+    void testExportContainers_Failure_ConsoleIdNull() throws IOException, RunnerException, IllegalAccessException {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setFreeTimeNoOfDaysDetention(3L);
@@ -886,7 +886,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_ConsoleNotFound() {
+    void testExportContainers_Failure_ConsoleNotFound() throws IOException, RunnerException, IllegalAccessException {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -897,7 +897,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_EmptyContainers() {
+    void testExportContainers_Failure_EmptyContainers() throws IOException, RunnerException, IllegalAccessException {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -913,7 +913,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_NullContainers() {
+    void testExportContainers_Failure_NullContainers() throws IOException, RunnerException, IllegalAccessException {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -1014,7 +1014,7 @@ class ContainerServiceTest extends CommonMocks {
 
     @Test
     void calculateAchieved_AllocatedForSameUnit_failure() {
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedAllocatedForSameUnit(null);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchieved_AllocatedForSameUnit(null);
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
     }
@@ -1081,7 +1081,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void list_Failure(){
+    void list_Failure() throws Exception{
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.list(commonRequestModel);
         assertNotNull(responseEntity);
@@ -1089,12 +1089,12 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void uploadContainers_NullReq() {
+    void uploadContainers_NullReq() throws Exception {
         assertThrows(ValidationException.class, () -> containerService.uploadContainers(null));
     }
 
     @Test
-    void uploadContainers_NullConsoleId(){
+    void uploadContainers_NullConsoleId() throws Exception {
         BulkUploadRequest request = new BulkUploadRequest();
         assertThrows(ValidationException.class, () -> containerService.uploadContainers(request));
     }
@@ -1281,7 +1281,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void downloadContainers(){
+    void downloadContainers() throws RunnerException{
         HttpServletResponse response = new MockHttpServletResponse();
         BulkDownloadRequest request = new BulkDownloadRequest();
         request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
@@ -1289,6 +1289,7 @@ class ContainerServiceTest extends CommonMocks {
         request.setShipmentId("6");
         when(shipmentDao.findById(any())).thenReturn(Optional.of(testShipment));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
+//        when(shipmentsContainersMappingDao.findByShipmentId(any()))
         when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(jsonTestUtility.getTestConsolidation()));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
         when(commonUtils.convertToList(anyList(), eq(ContainersExcelModel.class))).thenReturn(List.of(objectMapper.convertValue(testContainer, ContainersExcelModel.class)));
@@ -1296,7 +1297,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void downloadContainerEvents(){
+    void downloadContainerEvents() throws Exception {
         HttpServletResponse response = new MockHttpServletResponse();
         BulkDownloadRequest request = new BulkDownloadRequest();
         request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
@@ -1316,12 +1317,12 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void uploadContainerEvents_Failure() {
+    void uploadContainerEvents_Failure() throws Exception {
         assertThrows(ValidationException.class, () -> containerService.uploadContainerEvents(null));
     }
 
     @Test
-    void uploadContainerEvents_Failure_NullId() {
+    void uploadContainerEvents_Failure_NullId() throws Exception {
         BulkUploadRequest request = new BulkUploadRequest();
         assertThrows(ValidationException.class, () -> containerService.uploadContainerEvents(request));
     }
@@ -1339,7 +1340,7 @@ class ContainerServiceTest extends CommonMocks {
         c2.setContainerNumber("C456");
 
         List<Containers> containersList = Arrays.asList(c1,c2);
-        List<Containers> oldContainers = List.of(c1);
+        List<Containers> oldContainers = Arrays.asList(c1);
 
         V1TenantSettingsResponse v1TenantSettingsResponse = new V1TenantSettingsResponse();
         v1TenantSettingsResponse.setLogicAppIntegrationEnabled(true);
